java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateParam2-hints.pass
Create Field foo in org.netbeans.test.java.hints.CreateParam2
Create Parameter foo
Create Local Variable foo
